# SlicerLungSegmentation

./: .gitignore  CMakeLists.txt  LungSegmentation.json  LungSegmentation.py  README.md
LungSegmentation/: CMakeLists.txt  LungSegmentation.py
LungSegmentation/Resources/: models.json  nnUNetv2_predict  prediction
LungSegmentation/Resources/UI/: LungSegmentation.ui
LungSegmentation/Resources/scripts/: nnunet_runner.py
LungSegmentation/scripts/: nnunet_runner.py
Modules/Scripted/: LungSegmentation.py
Resources/: models.json
Resources/UI/: LungSegmentation.ui
